--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,12 @@ build/Release
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
-node_modules
+# node_modules
 
 # Users Environment Variables
 .lock-wscript
+
+
+# IDE user-specifics
+**/.idea/workspace.xml
+**/.idea/tasks.xml
