--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,14 @@ build/Release
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
-# node_modules
+node_modules
 
 # Users Environment Variables
 .lock-wscript
+
+
+# Bower components
+bower_components
 
 
 # IDE user-specifics
